--- a/glm_3.qmd
+++ b/glm_3.qmd
@@ -26,6 +26,7 @@ $y = b_0 + b_{1}X + e$
 ```{r}
 #| code-fold: true
 library(broom)
+library(tidyverse)
 set.seed(123)
 x.1 <- rnorm(100, 0, 1)
 e.1 <- rnorm(100, 0, 2)
