--- a/index.qmd
+++ b/index.qmd
@@ -5,4 +5,4 @@ title: "Quant 1"
 
 Welcome to the first day of class! If you want to follow along with examples, head over to github for all of the code and data. https://github.com/josh-jackson/Quant_I_2025
 
-df
+dfg
