--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -7,6 +7,7 @@ format: html
 
 - LSR readings can be found in the free, online textbook, [*Learning Statistics with R*](https://learningstatisticswithr-bookdown.netlify.com/index.html) by Danielle Navarro.
 
+
 - Statistical thinking for the 21st century. By Russell A. Poldrack
 [Statistical thinking for the 21st century](https://statsthinking21.github.io/statsthinking21-core-site/) 
 
@@ -19,29 +20,29 @@ format: html
 |:--:|:--:|:--:|:--:|:--:|
 | 1 | 8/26 | Models |  |  |
 | \- | 8/28 | Describing data  |  |  |
-| 2 | 9/2 |  GLM basics  | LSR Ch 1 & 3 |  |
-| \- | 9/4 | Probability distributions | LSR Ch 5 & 6 |  |
-| 3 | 9/9 | Probability distributions | LSR Ch 5 & 6 | HW 1 due |
-| \- | 9/11 | Estimation, Likelihood & Loss   | LSR Ch 9 |  |
-| 4 | 9/16 |  Estimation, Likelihood & Loss       | LSR Ch 9 |  |
-| \- | 9/18 | Simple regressions (1 predictor and t-tests) | LSR Ch 10 |  |
+| 2 | 9/2 |  GLM basics  |  |  |
+| \- | 9/4 | Probability distributions |  |  |
+| 3 | 9/9 | Probability distributions |  | HW 1 due |
+| \- | 9/11 | Estimation, Likelihood & Loss   |  |  |
+| 4 | 9/16 |  Estimation, Likelihood & Loss       |  |  |
+| \- | 9/18 | Simple regressions (1 predictor and t-tests) |  |  |
 | 5 | 9/23 |  **Exam 1** |  |  |
-| \- | 9/25 | Statistical inference part 1 (Sampling and NHST)  | LSR Ch 11 | HW 2 due |
-| 6 | 9/30 |  Statistical inference part 2 (Estimation) | LSR Ch 11 |  |
-| \- | 10/2 | Statistical inference part 3 (Model comparisons)  | LSR Ch 11  |  |
+| \- | 9/25 | Statistical inference part 1 (Sampling and NHST)  | | HW 2 due |
+| 6 | 9/30 |  Statistical inference part 2 (Estimation) |  |  |
+| \- | 10/2 | Statistical inference part 3 (Model comparisons)  |  |  |
 | 7 | 10/7 | *No Class - Fall Break!* |  |  |
 | \- | 10/9 | Simulation and prediction  | |  |
-| 8 | 10/14 |  What can go wrong (Transparency and Open science)| LSR Ch 12 | |  
-| \- | 10/16 | Assumptions | LSR Ch 13 |  |
-| 9 | 10/21  | Power   | LSR Ch 13 |  |
-| \- | 10/23 | Visualizing Data   | LSR Ch 13 |  |
+| 8 | 10/14 |  What can go wrong (Transparency and Open science)|  | |  
+| \- | 10/16 | Assumptions |  |  |
+| 9 | 10/21  | Power   |  |  |
+| \- | 10/23 | Visualizing Data   |  |  |
 | 10 | 10/28 | Threats to Validity   |  |  |
 | \- | 10/30 | **Exam 2** |  | HW 3 due |
 | 11 | 11/4 |  3 or more means (ANOVA) |  |
 | \- | 11/6 |  Multiple comparisons & contrasts |  |  |
-| 12 | 11/11 | Interactions  | LSR Ch 16 |  |
+| 12 | 11/11 | Interactions  | |  |
 | \- | 11/13 | ANCOVA  | |  |
-| 13 | 11/18 | Within-subjects designs | LSR Ch 16 |  |
+| 13 | 11/18 | Within-subjects designs |  |  |
 | \- | 11/20 | Binomial and logistic regression   |  | |
 | 14 | 11/25 | Chi-Square test  |  |  |
 | \- | 11/27 | *No Class – Happy Thanksgiving!* |  |  |
